<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_primary"
    tools:context=".Activity.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@null"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_logoapp02" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/welcome_to_tsumusic"
                android:textColor="@color/colorBlack"
                android:textSize="25sp"
                android:fontFamily="@font/roboto_medium"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_to_continue"
                android:fontFamily="@font/roboto_medium"
                android:textSize="18sp"
                android:textStyle="normal" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <LinearLayout
                    android:id="@+id/LayoutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:background="@drawable/background_input"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">


                    <com.google.android.material.textfield.TextInputLayout



                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-9dp"
                        android:hint="@string/user_name"
                        app:counterEnabled="true"
                        app:counterMaxLength="50"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true"
                        app:helperTextTextColor="@color/colorRed"
                        app:startIconDrawable="@drawable/ic_person">

                        <EditText
                            android:id="@+id/Username1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="-20dp"
                            android:background="@null"
                            android:imeOptions="actionNext"
                            android:importantForAutofill="yes"
                            android:textColor="@color/colorBlack"
                            android:inputType="textPersonName"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <LinearLayout
                    android:id="@+id/LayoutPassWord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/background_input"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">


                    <com.google.android.material.textfield.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-9dp"
                        android:hint="@string/password"
                        app:counterEnabled="true"
                        app:counterMaxLength="20"
                        app:endIconMode="password_toggle"
                        app:errorEnabled="true"
                        app:helperTextTextColor="@color/colorRed"
                        app:startIconDrawable="@drawable/ic_lock">

                        <EditText
                            android:id="@+id/PassWord"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="-20dp"
                            android:background="@null"
                            android:imeOptions="actionDone"
                            android:importantForAutofill="yes"
                            android:inputType="textPassword"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textColor="@color/colorBlack"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView

                android:id="@+id/textviewforgotpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:text="Quên mật khẩu"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="bold"

                />

            <Button
                android:id="@+id/btnsignin"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="@color/transparent"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/signin"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_account"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textCreateAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/signup_now"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>